# Kern

./: .clang-tidy  .gitignore  .justfile  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md  format.sh  partitions.csv  release.sh  sdkconfig.defaults  sdkconfig.defaults.wave_35  sdkconfig.defaults.wave_4b  sdkconfig.defaults.wave_5
.github/workflows/: github-actions-test.yml
components/bsp_common/: CMakeLists.txt  pmic_stub.c
components/video/: CMakeLists.txt  video.c  video.h
components/wave_35/: CMakeLists.txt  Kconfig  idf_component.yml  pmic.c  wave_35.c
components/wave_35/include/bsp/: display.h  esp32_p4_wifi6_touch_lcd_35.h  pmic.h
components/wave_4b/: CMakeLists.txt  Kconfig  pmic_stub.c  wave_4b.c
components/wave_5/: CMakeLists.txt  Kconfig  esp_lcd_hx8394.c  idf_component.yml  wave_5.c
components/wave_5/include/: esp_lcd_hx8394.h
components/waveshare_bsp/: waveshare_bsp.c
docs/: security-plan.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/core/: message_sign.c  message_sign.h  settings.c  settings.h
main/core/test/: test_derivation_path.c
main/pages/: capture_entropy.c  store_mnemonic.c
main/pages/dev_tools/: decode_snapshots.c  dev_menu.c  snapshot.c
main/pages/home/: addresses.c  home.c  public_key.c
main/pages/login/: about.c  login.c  login_settings.c  login_settings.h
main/qr/: scanner.c
main/ui/: battery.c  battery.h  input_helpers.c  input_helpers.h  key_info.c  menu.c  theme.c  theme.h
simulator/: CMakeLists.txt  README.md
simulator/src/: main_sim.c
(+23 files in other folders)
